# dbmcp

./: .env.example  .gitignore  .taplo.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cog.toml  server.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  regression_report.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  identifier.rs  lib.rs  traits.rs  validation.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/mysql/: Cargo.toml
crates/mysql/src/: adapter.rs  backend.rs  connection.rs  handler.rs  lib.rs  mysql.rs  operations.rs  schema.rs  server.rs  tools.rs  types.rs
crates/mysql/src/tools/: create_database.rs  drop_database.rs  drop_table.rs  explain_query.rs  get_table_schema.rs  list_databases.rs  list_functions.rs  list_procedures.rs  list_tables.rs  list_triggers.rs  list_views.rs  mod.rs  read_query.rs  write_query.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: adapter.rs  backend.rs  connection.rs  handler.rs  lib.rs  operations.rs  postgres.rs  schema.rs  server.rs  tools.rs  types.rs
crates/postgres/src/tools/: create_database.rs  drop_database.rs  drop_table.rs  explain_query.rs  get_table_schema.rs  list_databases.rs  list_functions.rs  list_materialized_views.rs  list_procedures.rs  list_tables.rs  list_triggers.rs  list_views.rs  mod.rs  read_query.rs  write_query.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  handler.rs  lib.rs  pagination.rs  server.rs  tools.rs  types.rs
crates/sql/: Cargo.toml
crates/sql/src/: connection.rs  error.rs  identifier.rs  lib.rs  pagination.rs  sanitize.rs  timeout.rs  validation.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: adapter.rs  backend.rs  connection.rs  handler.rs  lib.rs  operations.rs  schema.rs  server.rs  sqlite.rs  tools.rs  types.rs
crates/sqlite/src/tools/: drop_table.rs  explain_query.rs  get_table_schema.rs  list_tables.rs  list_triggers.rs  list_views.rs  mod.rs  read_query.rs  write_query.rs
crates/sqlx-to-json/: Cargo.toml
crates/sqlx-to-json/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs  traits.rs
crates/sqlx_to_json/: Cargo.toml
docs/: next.config.mjs  package-lock.json  package.json  source.config.ts
docs/app/: global.css
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: provider.tsx  search.tsx
docs/components/homepage/: agents.tsx  databases.tsx  demo.tsx  hero.tsx
docs/content/docs/: configuration.mdx  features.mdx  index.mdx  installation.mdx  license.mdx  meta.json  security.mdx
docs/lib/: layout.shared.tsx  shared.ts  source.ts
docs/public/: install.cmd  install.ps1  install.sh
docs/tapes/: demo.sh  demo.tape
src/: backend.rs  cli.rs  config.rs  consts.rs  error.rs  lib.rs  main.rs  server.rs
src/commands/: common.rs  http.rs  mod.rs  root.rs  stdio.rs
src/db/: backend.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  validation.rs
src/server/: mod.rs
src/tools/: database.rs
tests/: compose.yml  run.sh
tests/approval/: common.rs  mysql.rs  postgres.rs  sqlite.rs
tests/approval/snapshots/: approval_mysql__list_tools.snap  approval_mysql__list_tools_read_only.snap  approval_mysql__server_info.snap  approval_postgres__list_tools.snap  approval_postgres__list_tools_read_only.snap  approval_postgres__server_info.snap  approval_sqlite__list_tools.snap  approval_sqlite__list_tools_read_only.snap  approval_sqlite__server_info.snap
tests/functional/: common.rs  mysql.rs  postgres.rs  sqlite.rs
tests/mysql/: mysql.rs  setup.sql
tests/postgres/: postgres.rs  setup.sql
tests/seed/: mysql.sql  postgres.sql  sqlite.sql
tests/sqlite/: sqlite.rs
