[package]
name = "database-mcp"
version.workspace = true
edition.workspace = true
description = "A single-binary MCP server for MySQL, PostgreSQL, and SQLite"
license.workspace = true
repository.workspace = true
keywords = ["mcp", "database", "mysql", "postgresql", "sqlite"]
categories = ["database", "command-line-utilities"]

[workspace]
members = [
    ".",
    "crates/backend",
    "crates/config",
    "crates/mysql",
    "crates/postgres",
    "crates/server",
    "crates/sqlite",
    "crates/sqlx_to_json",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/haymon-ai/database-mcp"

[workspace.dependencies]
# Internal workspace crates
backend = { path = "crates/backend" }
config = { path = "crates/config" }
mysql = { path = "crates/mysql" }
postgres = { path = "crates/postgres" }
server = { path = "crates/server" }
sqlite = { path = "crates/sqlite" }
sqlx_to_json = { path = "crates/sqlx_to_json" }

# External dependencies
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
mimalloc = "0.1"
moka = { version = "0.12", features = ["future"] }
rmcp = { version = "1.3", features = [
    "macros",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61", features = ["visitor"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"
module_name_repetitions = "allow"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
backend = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
mimalloc = { workspace = true }
mysql = { workspace = true }
postgres = { workspace = true }
rmcp = { workspace = true }
server = { workspace = true }
sqlite = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "mysql"
path = "tests/mysql/mysql.rs"

[[test]]
name = "postgres"
path = "tests/postgres/postgres.rs"

[[test]]
name = "sqlite"
path = "tests/sqlite/sqlite.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
