[package]
name = "database-mcp"
version.workspace = true
edition.workspace = true
description = "A single-binary MCP server for MySQL, PostgreSQL, and SQLite"
license.workspace = true
repository.workspace = true
keywords = ["mcp", "database", "mysql", "postgresql", "sqlite"]
categories = ["database", "command-line-utilities"]

[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/haymon-ai/database"

[workspace.dependencies]
# Internal workspace crates
database-mcp-config = { path = "crates/config", version = "0.5.1" }
database-mcp-mysql = { path = "crates/mysql", version = "0.5.1" }
database-mcp-postgres = { path = "crates/postgres", version = "0.5.1" }
database-mcp-server = { path = "crates/server", version = "0.5.1" }
database-mcp-sql = { path = "crates/sql", version = "0.5.1" }
database-mcp-sqlite = { path = "crates/sqlite", version = "0.5.1" }
sqlx_to_json = { path = "crates/sqlx-to-json", version = "0.5.1" }

# External dependencies
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
mimalloc = "0.1"
moka = { version = "0.12", features = ["future"] }
rmcp = { version = "1.3", features = [
    "macros",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61", features = ["visitor"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev/test dependencies
insta = { version = "1", features = ["json", "redactions"] }
reqwest = { version = "0.12", features = ["json"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"
module_name_repetitions = "allow"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
database-mcp-config = { workspace = true }
database-mcp-mysql = { workspace = true }
database-mcp-postgres = { workspace = true }
database-mcp-server = { workspace = true }
database-mcp-sql = { workspace = true }
database-mcp-sqlite = { workspace = true }
mimalloc = { workspace = true }
rmcp = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
database-mcp-config = { workspace = true }
database-mcp-mysql = { workspace = true }
database-mcp-postgres = { workspace = true }
database-mcp-server = { workspace = true }
database-mcp-sql = { workspace = true }
database-mcp-sqlite = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true }
rmcp = { version = "1.3", features = [
    "client",
    "macros",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
serde_json = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[[test]]
name = "functional_mysql"
path = "tests/functional/mysql.rs"

[[test]]
name = "functional_postgres"
path = "tests/functional/postgres.rs"

[[test]]
name = "functional_sqlite"
path = "tests/functional/sqlite.rs"

[[test]]
name = "approval_mysql"
path = "tests/approval/mysql.rs"

[[test]]
name = "approval_postgres"
path = "tests/approval/postgres.rs"

[[test]]
name = "approval_sqlite"
path = "tests/approval/sqlite.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
