[package]
name = "dbmcp"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["mcp", "database", "mysql", "postgresql", "sqlite"]
categories = ["database", "command-line-utilities"]

[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.8.0"
edition = "2024"
description = "A single-binary MCP server for MySQL, MariaDB, PostgreSQL, and SQLite"
homepage = "https://dbmcp.haymon.ai"
license = "MIT"
repository = "https://github.com/haymon-ai/dbmcp"

[workspace.dependencies]
# Internal workspace crates
dbmcp-config = { path = "crates/config", version = "0.8.0" }
dbmcp-mysql = { path = "crates/mysql", version = "0.8.0" }
dbmcp-postgres = { path = "crates/postgres", version = "0.8.0" }
dbmcp-server = { path = "crates/server", version = "0.8.0" }
dbmcp-sql = { path = "crates/sql", version = "0.8.0" }
dbmcp-sqlite = { path = "crates/sqlite", version = "0.8.0" }
sqlx-json = { path = "crates/sqlx-json", version = "0.8.0" }

# External dependencies
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
mimalloc = "0.1"
moka = { version = "0.12", features = ["future"] }
rmcp = { version = "1.3", features = [
    "macros",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = { version = "1.2", features = ["indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61", features = ["visitor"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev/test dependencies
insta = { version = "1", features = ["json", "redactions"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"
module_name_repetitions = "allow"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
dbmcp-config = { workspace = true }
dbmcp-mysql = { workspace = true }
dbmcp-postgres = { workspace = true }
dbmcp-server = { workspace = true }
dbmcp-sqlite = { workspace = true }
mimalloc = { workspace = true }
rmcp = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
insta = { workspace = true }
rmcp = { workspace = true, features = ["client"] }
serde_json = { workspace = true }

[[test]]
name = "functional_mysql"
path = "tests/functional/mysql.rs"

[[test]]
name = "functional_postgres"
path = "tests/functional/postgres.rs"

[[test]]
name = "functional_sqlite"
path = "tests/functional/sqlite.rs"

[[test]]
name = "approval_mysql"
path = "tests/approval/mysql.rs"

[[test]]
name = "approval_postgres"
path = "tests/approval/postgres.rs"

[[test]]
name = "approval_sqlite"
path = "tests/approval/sqlite.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
