[package]
name = "database-mcp-config"
description = "Config for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
