[package]
name = "database-mcp-mysql"
description = "MySQL/MariaDB for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-config = { workspace = true }
database-mcp-server = { workspace = true }
database-mcp-sql = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
sqlx_to_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
