[package]
name = "dbmcp-mysql"
description = "MySQL/MariaDB for dbmcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dbmcp-config = { workspace = true }
dbmcp-server = { workspace = true }
dbmcp-sql = { workspace = true }
moka = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["mysql", "json"] }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
