[package]
name = "postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp_core = { path = "../core", package = "mcp-core" }
backend = { workspace = true }
sqlx_to_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlparser = { workspace = true }
moka = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[lints]
workspace = true
