[package]
name = "postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
backend = { workspace = true }
config = { workspace = true }
moka = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
server = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
sqlx_to_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
