[package]
name = "database-mcp-postgres"
description = "PostgreSQL for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-config = { workspace = true }
database-mcp-server = { workspace = true }
database-mcp-sql = { workspace = true }
moka = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
