[package]
name = "database-mcp-server"
description = "Server for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
