[package]
name = "database-mcp-sql"
description = "SQL validation and identifier utilities for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-server = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
