[package]
name = "database-mcp-sqlite"
description = "SQLite for database-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-config = { workspace = true }
database-mcp-server = { workspace = true }
database-mcp-sql = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
