[package]
name = "dbmcp-sqlite"
description = "SQLite for dbmcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dbmcp-config = { workspace = true }
dbmcp-server = { workspace = true }
dbmcp-sql = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
