[package]
name = "sqlx_to_json"
version.workspace = true
edition.workspace = true
description = "Database-agnostic row-to-JSON conversion for sqlx"
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
